# RGBDT-Predictive

./: .gitignore  README.md  analyse_results.py  config.yaml  config_utils.py  dataset.dvc  dataset.py  dataset_jepa.py  freeze_splits.py  launch_fusion.sh  main.py  ml_pipeline.py  models.py  pretrain_jepa.py  pyproject.toml  train.py  train_downstream.py  visualize_dataloader.py  visualize_latents.py
.dvc/: config
configs/: distillation_params.json
data/splits/MM5/: classes.txt  test.csv  train.csv  val.csv
dataset/: MM5.dvc
dataset/MM5/: eval_dataset.csv  label_mapping.json  train_dataset.csv
