[project]
name = "rgbdt-predictive"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dvc>=3.67.1",
    "dvc-gdrive>=3.0.1",
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "opencv-python>=4.13.0.92",
    "optuna>=4.9.0",
    "pandas>=3.0.3",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.9.0",
    "segmentation-models-pytorch>=0.5.0",
    "tensorboard>=2.20.0",
    "timm>=1.0.27",
    "torch>=2.12.1",
    "torchinfo>=1.8.0",
    "torchvision>=0.27.1",
]
[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu130" }]
torchvision = [{ index = "pytorch-cu130" }]
