[project]
name = "rgbdt-predictive"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "dvc>=3.67.1",
    "dvc-gdrive>=3.0.1",
    "matplotlib>=3.11.0",
    "numpy<2.0.0",
    "onnx>=1.22.0",
    "onnxscript>=0.7.1",
    "opencv-python<4.11.0",
    "optuna>=4.9.0",
    "optuna-dashboard>=0.20.0",
    "pandas<3.0.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.9.0",
    "scipy<1.14.0",
    "seaborn>=0.13.2",
    "segmentation-models-pytorch>=0.5.0",
    "tensorboard>=2.20.0",
    "timm>=1.0.27",
    "torch>=2.12.1",
    "torchaudio>=2.11.0",
    "torchinfo>=1.8.0",
    "torchvision>=0.27.1",
    "umap-learn>=0.5.12",
]
[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu130" }]
torchvision = [{ index = "pytorch-cu130" }]
